# novasyn-mba

./: .gitignore  CONTRIBUTING.md  DESIGN.md  LICENSE  README.md  index.html  novasyn_mba.agi  package-lock.json  package.json
scaffold/stages/: business_stage.md
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md
src-tauri/migrations/: 001_initial.sql
src-tauri/src/: ai_service.rs  compiler.rs  db.rs  main.rs  router.rs
src-tauri/src/commands/: a_i_stack_decision.rs  actions.rs  advance_business_stage.rs  board_member.rs  business.rs  calculate_ltv_cac.rs  content_pipeline_item.rs  dollar_audit.rs  event_bus.rs  export_business_report.rs  financial_snapshot.rs  generate_pitch_deck_outline.rs  import_csv_contacts.rs  marketing_asset.rs  mod.rs  operations_audit.rs  portfolio_synergy.rs  sales_contact.rs  strategic_position.rs  weekly_review.rs
src/components/: ApiKeyModal.tsx  App.tsx  ModelPicker.tsx  Sidebar.tsx  TitleBar.tsx  board_members.tsx  business_cards.tsx  business_detail.tsx  content_pipeline.tsx  dollar_audit_tool.tsx  portfolio_dashboard.tsx  sales_pipeline.tsx  synergy_board.tsx  unit_economics_dashboard.tsx  weekly_review_form.tsx
src/engine/: expert-engine.ts
src/lib/: api.ts  eventBus.ts  preferences.ts  skills.ts  stages.ts  types.ts
src/store/: appStore.ts
src/styles/: globals.css
